# OCRPack

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: burmesechar.txt
configs/: parseq.yaml
data/: gt.txt  myan_data.txt  myan_words.txt  wordlist.txt
ocrpack/: __init__.py
ocrpack/data/: data_augment.py  data_module.py  tokenzier.py  utils.py
ocrpack/data/datasets/: base.py  simple_dataset.py
ocrpack/models/text_recog/LMs/: __init__.py  xlnet.py
ocrpack/models/text_recog/architectures/: __init__.py  parseq.py
ocrpack/models/text_recog/backbones/: vit.py
ocrpack/models/text_recog/modules/: __init__.py  blocks.py  layers.py
ocrpack/utils/: __init__.py  general.py  torch_utils.py
scripts/: demo.py
tools/: convert_lmdb.py  gen_image.py
